# EdgeSight

./: .gitignore  AUDIT_REPORT.md  CMakeLists.txt  Dockerfile  INTERVIEW_PREP.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_COMPLETE.md  README.md  desktop_client.py  docker-compose.yml  fastapi_server.py  pytest_output.txt  requirements.txt  run_fastapi_tests.py  run_mock_tests.py  serve_local.py
.Jules/: palette.md
.github/workflows/: build.yml
.jules/: bolt.md
app/: CMakeLists.txt  alert_manager.cpp  alert_manager.h  config.h  config.json  config_loader.cpp  config_loader.h  main.cpp  mainwindow.cpp  mainwindow.h  processing_thread.cpp  processing_thread.h  resources.qrc
data/: README.md  dataset.py  download_datasets.py  preprocess.py
data/processed/: synthetic_metadata.json
docs/: MEDIAPIPE_INTEGRATION.md
inference/: python_infer.py
inference/benchmark/: benchmark.py  cpp_benchmark.cpp  report_generator.py
inference/engine/: CMakeLists.txt
inference/engine/include/: fall_detector.h
inference/engine/src/: fall_detector.cpp
inference/engine/tests/: test_engine.cpp
model/: architecture.py  evaluate.py  export_onnx.py  quantize.py  train.py
scripts/: generate_synthetic_data.py  generate_test_model.py  mediapipe_pose.py  run_benchmark.py  setup_env.bat
tests/: test_config_loader.py  test_inference.py  test_model.py  test_python_infer.py
web/: app.js  index.html  styles.css
